--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-vue": "^9.18.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^1.8.5"
   }
 }
