feat: 建立主題切換 & 配置 pinia 與 local storage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
+  "eslint.validate": [
+    "typescript"
+  ],
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
   // 換行符號
