--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-import-resolver-custom-alias": "^1.3.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.6.5",
     "vue-router": "^4.2.5",
     "vuetify": "^3.3.23"
   },
