--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "axios": "^1.6.1",
     "eslint-import-resolver-custom-alias": "^1.3.2",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
